# defenseclaw

./: .gitignore  CHANGELOG.md  Makefile  README.md  RELEASE_NOTES_0.3.0.md  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml  connector-live-e2e.yml  release.yaml
bundles/llm/: model_catalog.json
bundles/local_observability_stack/: README.md  docker-compose.yml
bundles/splunk_o11y_dashboards/: README.md
cli/defenseclaw/: __init__.py  audit_actions.py  bootstrap.py  codeguard_skill.py  config.py  connector_contracts.py  connector_paths.py  credentials.py  db.py  gateway.py  logger.py  main.py  migrations.py  models.py  openclaw_guardrail.py  paths.py  platform_support.py  skill_list.py
cli/tests/: connector_fixtures.py  helpers.py  test_admission.py  test_agent_discovery.py  test_ai_signatures.py  test_bootstrap.py  test_check_schemas.py  test_claudecode_config.py  test_claw_inventory.py  test_cli_smoke.py  test_cmd_agent_components.py  test_cmd_agent_discover.py  test_cmd_agent_discovery.py  test_cmd_agent_token_resolution.py  test_cmd_doctor.py  test_cmd_doctor_connector.py  test_cmd_doctor_gateway_token_drift.py  test_cmd_doctor_gateway_token_env.py  test_cmd_doctor_residue.py  test_cmd_doctor_splunk_hec.py  test_cmd_guardrail.py  test_cmd_guardrail_matrix.py  test_cmd_init.py  test_cmd_judge.py  test_cmd_keys.py  test_cmd_mcp.py  test_cmd_mcp_scan_ux.py  test_cmd_misc.py  test_cmd_plugin.py  test_cmd_plugin_scan_ux.py  test_cmd_policy.py  test_cmd_quickstart.py  test_cmd_setup_codex_claudecode_alias.py  test_cmd_setup_connector_llm.py  test_cmd_setup_fu_phase2.py  test_cmd_setup_local_observability_helpers.py  test_cmd_setup_mode.py  test_cmd_setup_multi_connector.py  test_cmd_setup_observability.py  test_cmd_setup_provider.py  (+52 more)
docs/: AI_DISCOVERY_CONFIDENCE.md  ARCHITECTURE.md  CLI.md  CONFIG_FILES.md  CONNECTOR-COMMIT-SUMMARY.md  CONNECTOR-MATRIX.md  CONNECTOR-REMAINING-FIXES.md  GUARDRAIL.md  INSTALL.md  OBSERVABILITY-CONTRACT.md  OBSERVABILITY.md  OTEL-IMPLEMENTATION-STATUS.md  OTEL.md  PR141-MATRIX-UPDATE.md  SPLUNK_APP.md  TESTING.md
docs-site/components/: command-generator.tsx
docs-site/data/: capability-matrix.json  policy-presets.json  policy-recipes.json  rule-axes.json
docs-site/lib/: hero-connectors.ts  layout-options.tsx
docs/design/: python-textual-tui-parity-spec.md
extensions/defenseclaw/: package.json
internal/audit/: actions.go  actions_completeness_test.go  context.go  context_test.go  judge_body_store.go  judge_body_store_test.go  judge_responses_test.go  logger.go  logger_test.go  network_egress.go  parity_test.go  retry_test.go  scan_persist.go  store.go  store_pool_test.go  store_test.go
internal/cli/: audit_export.go  audit_export_test.go  connector_cmd.go  connector_cmd_test.go  correlator_wire.go  hook.go  hook_test.go  sidecar.go  sidecar_test.go  sidecar_unix.go  sidecar_windows.go  status.go  status_connectors_test.go  watchdog.go  watchdog_unix.go  watchdog_windows.go
internal/config/: claw.go  claw_codex_mcp_test.go  claw_test.go  config.go  config_test.go  defaults.go  multi_connector_test.go  notifications.go
internal/configs/: embed.go  embed_test.go
internal/daemon/: proc_unix.go  proc_windows.go
internal/firewall/: config.go
internal/gateway/: agent_discovery.go  agent_discovery_test.go  agent_hook.go  agent_hook_e2e_test.go  agent_hook_panic_test.go  agent_hook_test.go  agent_registry.go  ai_usage.go  ai_usage_endpoints_test.go  ai_usage_test.go  api.go  asset_policy_runtime.go  asset_policy_runtime_test.go  audit_bridge.go  audit_bridge_test.go  audit_event.go  claude_code_hook.go  claude_code_hook_test.go  codex_hook.go  codex_hook_runlist_test.go  codex_hook_test.go  correlation_integration_test.go  correlation_middleware.go  correlation_middleware_test.go  decision.go  decision_test.go  events.go  events_test.go  gateway_test.go  guardrail.go  guardrail_manual_test.go  guardrail_phase_span_test.go  health.go  health_test.go  hilt.go  hook_audit_envelope.go  hook_audit_envelope_test.go  hook_config_guard.go  hook_config_guard_test.go  hook_findings_emit.go  (+49 more)
internal/gatewaylog/: events.go  events_test.go  pretty.go  validator_test.go  writer.go
internal/guardrail/: axes.go  axes_test.go  capability.go  correlator.go  correlator_test.go  rulepack_cache.go  rulepack_cache_test.go
internal/inventory/: ai_catalog.go  ai_discovery.go  ai_discovery_test.go  ai_telemetry_test.go  confidence.go  confidence_policy.yaml  confidence_test.go  policy.go  policy_test.go  retry_test.go  store.go  store_pool_test.go  store_test.go
internal/notify/: notify_windows.go
internal/scanner/: agent_identity.go  emit_integration_test.go  inspect_emit.go  inspect_emit_test.go  result.go  scan_emitter.go  target_type.go
internal/telemetry/: ai_confidence_test.go  alerts.go  connector_ingest_test.go  connector_label_test.go  gateway_events.go  gateway_events_test.go  global_provider.go  guardrail_stage_span_test.go  lifecycle.go  metrics.go  model_label_normalize_test.go  pii_redaction_test.go  provider_test.go  resource.go  runtime.go  scan.go  slo.go  testing.go
internal/tui/: actionmenu.go  activity.go  ai_discovery.go  ai_discovery_test.go  ai_usage.go  ai_usage_test.go  app.go  click_box.go  command.go  command_intent.go  command_intent_test.go  configedit.go  connector_label.go  connector_label_test.go  first_run.go  first_run_test.go  hints.go  inventory.go  logs.go  mcp_set_form.go  mcp_set_form_test.go  modals.go  mode_modal.go  mode_modal_test.go  mouse_test.go  notifications_modal.go  overview.go  overview_ai_discovery_test.go  overview_doctor_test.go  overview_redaction_test.go  palette.go  plugins_actions_test.go  redaction_modal.go  registries.go  secrets.go  setup.go  (+7 more)
schemas/: audit-event.json  gateway-event-envelope.json  registry-manifest.schema.json  scan-finding-event.json
scripts/: assert-gateway-jsonl.py  check_audit_no_raw_literals.py  check_llm_catalog.py  check_schemas.py  dashboard_audit_pass.py  discover_unregistered_audit_actions.py  discovered_unregistered_audit_actions.txt
(+365 files in other folders)
