[project]
name = "defenseclaw"
version = "0.5.0"
description = "Enterprise governance layer for OpenClaw — secures agentic AI deployments"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "click==8.3.1",
    "pyyaml==6.0.3",
    "requests==2.33.0",
    "rich>=13.0",
    "cisco-ai-skill-scanner==2.0.8",
    "cisco-ai-mcp-scanner>=4.3; python_version>='3.11'",
    # AWS Bedrock support is bundled. LiteLLM lazy-imports boto3 for
    # SigV4 (iam_credentials / profile / instance_role) and for the
    # Anthropic-on-Bedrock route used by ABSK bearer tokens. Bundling
    # it costs ~30 MB on top of the existing 428 MB base install
    # (~7%) and removes a recurring first-run failure for the largest
    # enterprise LLM provider in the matrix. Vertex AI's SDK is ~286
    # MB and kept as an opt-in extra (see ``[vertex]``) — flip there
    # if usage analytics ever justify the disk cost.
    "boto3>=1.34",
]

# P3-#20: the legacy Textual TUI (`defenseclaw alerts --tui`) was
# retired in favour of the Go-based TUI launched via `defenseclaw tui`.
# No Python-side TUI extra is shipped anymore; the alerts command now
# renders a plain Rich table.

[project.optional-dependencies]
# Vertex AI auth (service-account JSON, ADC, workload identity).
# LiteLLM lazy-imports ``google-cloud-aiplatform`` for this route, and
# the SDK pulls ~286 MB of transitive deps (BigQuery, Cloud Storage,
# Cloud Resource Manager, gRPC, protobuf). That nearly doubles the
# base install, so we keep it opt-in. Install with
# ``pip install 'defenseclaw[vertex]'``. Bedrock is bundled by
# default — see the ``boto3`` entry under ``[project].dependencies``.
vertex = ["google-cloud-aiplatform>=1.60", "google-auth>=2.30"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "jsonschema>=4.23.0",
    "ruff==0.15.7",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
]

[project.scripts]
defenseclaw = "defenseclaw.main:main"

[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["cli"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
defenseclaw = [
    "_data/policies/*.yaml",
    "_data/policies/rego/*.rego",
    "_data/policies/rego/*.json",
    "_data/skills/codeguard/*.md",
    "_data/skills/codeguard/*.yaml",
    "_data/skills/codeguard/*.py",
    "_data/splunk_local_bridge/bin/*",
    "_data/splunk_local_bridge/compose/*",
    "_data/splunk_local_bridge/env/.env.example",
    "_data/splunk_local_bridge/s3_exporter/*",
    "_data/splunk_local_bridge/s3_exporter/tests/*",
    "_data/splunk_local_bridge/splunk/*",
    "_data/splunk_local_bridge/splunk/ansible/*",
    "_data/splunk_local_bridge/splunk/bin/*",
    "_data/splunk_local_bridge/splunk/apps/defenseclaw_local_mode/bin/*",
    "_data/splunk_local_bridge/splunk/apps/defenseclaw_local_mode/default/*",
    "_data/splunk_local_bridge/splunk/apps/defenseclaw_local_mode/default/data/ui/nav/*",
    "_data/splunk_local_bridge/splunk/apps/defenseclaw_local_mode/default/data/ui/views/*",
    "_data/splunk_local_bridge/splunk/apps/defenseclaw_local_mode/metadata/*",
    "_data/scripts/*.sh",
    "_data/llm/*.json",
    "inventory/ai_signatures.json",
    "_data/policies/openshell/*.rego",
    "_data/policies/openshell/*.yaml",
    "_data/policies/guardrail/default/*.yaml",
    "_data/policies/guardrail/default/judge/*.yaml",
    "_data/policies/guardrail/default/rules/*.yaml",
    "_data/policies/guardrail/strict/*.yaml",
    "_data/policies/guardrail/strict/judge/*.yaml",
    "_data/policies/guardrail/strict/rules/*.yaml",
    "_data/policies/guardrail/permissive/*.yaml",
    "_data/policies/guardrail/permissive/judge/*.yaml",
    "_data/policies/guardrail/permissive/rules/*.yaml",
    "_data/local_observability_stack/*.md",
    "_data/local_observability_stack/*.yml",
    "_data/local_observability_stack/*.sh",
    "_data/local_observability_stack/bin/*",
    "_data/local_observability_stack/otel-collector/*.yaml",
    "_data/local_observability_stack/prometheus/*.yml",
    "_data/local_observability_stack/prometheus/rules/*.yml",
    "_data/local_observability_stack/loki/*.yaml",
    "_data/local_observability_stack/tempo/*.yaml",
    "_data/local_observability_stack/grafana/dashboards/*.json",
    "_data/local_observability_stack/grafana/provisioning/dashboards/*.yml",
    "_data/local_observability_stack/grafana/provisioning/datasources/*.yml",
    "_data/splunk_o11y_dashboards/*.md",
    "_data/splunk_o11y_dashboards/terraform/*.tf",
]

[tool.uv]
default-groups = ["dev"]
# cisco-ai-skill-scanner 2.0.6 pins rich==14.2.0 but also pins
override-dependencies = [
    "rich>=13.7.1,<14.0.0",
    "cryptography>=46.0.7",   # CVE-2026-39892 fixed in 46.0.7
    "litellm==1.83.10",       # CVE-2026-40217 fixed in 1.83.10 (also covers CVE-2026-35029, CVE-2026-35030, GHSA-xqmj-j6mv-4862 fixed in earlier 1.83.x)
    # litellm pins exact transitive versions that conflict with what
    # cisco-ai-skill-scanner 2.0.8 (and our own pins) expect. We
    # override to a single compatible version per package — the newer
    # of the two — and rely on litellm's runtime API surface being
    # compatible with the bumped versions (verified via Python tests
    # in CI). CVE-2026-28684 (python-dotenv 1.2.1) is tracked via
    # pip-audit's ignore list in ci.yml.
    "python-dotenv==1.2.1",
    "openai==2.30.0",
    "click>=8.3.1",
    "importlib-metadata>=8.7.1",
    "jsonschema>=4.26.0",
    "python-multipart>=0.0.27", # CVE-2026-40347 and CVE-2026-42561 fixed by 0.0.27
    "urllib3>=2.7.0",           # CVE-2026-44431, CVE-2026-44432 fixed in 2.7.0
    "idna>=3.15",               # CVE-2026-45409 fixed in 3.15
    # aiohttp 3.14.0 fixes CVE-2026-34993 (on top of the 3.13.4 batch:
    # CVE-2026-22815, CVE-2026-34513..34520, CVE-2026-34525). litellm's
    # transitive pin floats aiohttp downward without this override.
    "aiohttp>=3.14.0",
    # pyjwt 2.13.0 fixes PYSEC-2026-175, -177, -178, -179. Transitive
    # dep via the mcp package; override ensures the lock resolves the
    # patched version.
    "pyjwt>=2.13.0",
    # PYSEC-2026-161 fixed in starlette 1.0.1. fastapi must be bumped
    # to >=0.133.0 (first release supporting starlette 1.x).
    "starlette>=1.0.1,<1.1",
    # MAL-2026-4750: fastapi 0.136.3 ships an undocumented `fastar`
    # dependency injected via pyproject.toml/PKG-INFO. The Amazon
    # Inspector advisory flags this as a dependency-confusion vector
    # because `pip install "fastapi[standard]"` silently pulls
    # `fastar` from PyPI. Pin away from 0.136.3 until an upstream
    # patch release ships.
    "fastapi>=0.133.0,!=0.136.3",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["cli/tests"]
